# calendar

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
calendar_event_description_layout/: README.rst  __manifest__.py
calendar_event_description_layout/i18n/: calendar_event_description_layout.pot  it.po
calendar_event_description_layout/readme/: CONTRIBUTORS.md  DESCRIPTION.md
calendar_event_description_layout/views/: calendar_views.xml
calendar_event_type_color/: README.rst  __manifest__.py
calendar_event_type_color/i18n/: calendar_event_type_color.pot  sl.po
calendar_event_type_color/models/: calendar_event.py
calendar_event_type_color/readme/: CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
calendar_event_type_color/tests/: test_calendar_event.py
calendar_event_type_color/views/: calendar_event_type_views.xml
calendar_export_ics/: README.rst
calendar_export_ics/i18n/: it.po  sl.po
calendar_export_ics/wizards/: wizard_export_ics.xml
calendar_import_ics/: README.rst
calendar_import_ics/i18n/: sl.po
calendar_import_ics/tests/: test_calendar_import_ics.py
calendar_import_ics/wizards/: wizard_import_ics.xml
calendar_public_holiday/: README.rst  __manifest__.py  hooks.py
calendar_public_holiday/i18n/: calendar_public_holiday.pot  es.po  fr.po  it.po  sl.po
calendar_public_holiday/models/: calendar_public_holiday.py  calendar_public_holiday_line.py
microsoft_calendar_filter/: README.rst  __manifest__.py
resource_booking/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml  setup.py
(+36 files in other folders)
